test/Fail/Issue543a.err
Issue543a.agda:34.50-54: error: [UnequalTerms]
The terms
  true
and
  unsquash _
are not equal at type Bool
when checking that the expression refl has type true ≡ unsquash _
